@@ -1,6 +1,9 @@
 Release 1.0 (in development)
 ============================
 
+* The ``toctree()`` callable in templates now has a ``maxdepth``
+  keyword argument to control the depth of the generated tree.
+
 * Added Catalan translation, thanks to Pau Fernández.
 
 * Added new minimal theme called scrolls.
